<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensing</name>
  <version>0.0.0</version>
  <description>Package for launching sensors connected to the robot.</description>
  <maintainer email="150358009+amirrezafazel@users.noreply.github.com">amirreza fazel - cavlab</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>zed_wrapper</exec_depend>
  <exec_depend>microstrain_inertial_driver</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>hemisphere_gnss</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
